--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
 	},
 	"devDependencies": {
 		"@babel/core": "7.0.0",
-		"babel-preset-react-native": "4.0.0",
-		"metro-react-native-babel-preset": "^0.45.0",
+		"@types/react-native": "^0.57.65",
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-react": "^6.24.1",
+		"babel-preset-react-native": "4.0.0",
 		"babel-register": "^6.26.0",
 		"jest": "^24.0.0",
-		"react-test-renderer": "^16.6.3"
+		"metro-react-native-babel-preset": "^0.45.0",
+		"react-test-renderer": "^16.6.3",
+		"typescript": "^4.0.3"
 	},
 	"jest": {
 		"preset": "@youi/react-native-youi",
